--- a/styles.css
+++ b/styles.css
@@ -186,43 +186,13 @@ body {
     text-align: left;
     margin-bottom: 20px;
 }
-  
-.experiences__company-header-durability {
-    color: var(--durability-text-color);
-    text-align: left;
-    margin-bottom: 10px;
-    font-size: 15px;
-}
-  
-.experiences__company-header-name {
-    color: var(--primary-text-color);
-    text-decoration-color: var(--text-decoration-color);
-    text-decoration-line: underline;
-    text-align: left;
-    margin-bottom: 20px;
-}
-  
-.experiences__company-project {
-    margin-left: 15px;
-    margin-bottom: 25px;
-}
-  
-.experiences__company-project-role {
-    color: var(--durability-text-color);
-    text-align: left;
-    margin-bottom: 10px;
-    font-size: 15px;
-}
-  
-.experiences__company-project-name {
-    color: var(--primary-text-color);
-    text-align: left;
-    margin-bottom: 10px;
-}
-  
-.experiences__company-project-responsibilities {
-    color: var(--secondary-text-color);
+
+.experiences__timeline {
     padding-left: 20px;
+}
+
+.experiences__timeline p {
+    color: var(--secondary-text-color);
 }
   
 .additional-info {
